--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootswatch": "^4.5.0",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
