--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
-  "name": "beer",
-  "version": "0.1.0",
-  "private": true,
+  "name": "drunken-clam",
+  "version": "1.0.0",
+  "description": "Demo mini-app",
+  "keywords": [
+    "React",
+    "Redux",
+    "Bootstrap"
+  ],
+  "author": {
+    "name": "Aydin Ghane Kh.",
+    "email": "aydin.ghane.kh@gmail.com",
+    "url": "http://iding.ir"
+  },
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/iding-ir/drunken-clam.git"
+  },
+  "bugs": {
+    "url": "https://github.com/iding-ir/drunken-clam/issues"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
