--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drunken-clam",
   "version": "1.0.0",
-  "description": "Demo mini-app",
+  "description": "Demo React and Redux mini-app",
   "keywords": [
     "React",
     "Redux",
